--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:400,400i,700");
 
 html, body {
-  background: linear-gradient(to left, #fd746c , #ff9068);
+  background: linear-gradient(to left, #65cf59 , #cd7656);
   height: 100%;
   width: 100%;
   display: flex;
@@ -22,7 +22,7 @@ h1 {
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 20px 30px;
-  background-color: white;
+  background-color: rgb(18, 102, 109);
   border: 4px solid black;
   box-shadow: 4px 4px 0 0 black;
 }
@@ -36,17 +36,19 @@ h1 {
   align-items: center;
   font-size: 20px;
   font-weight: 500;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: rgb(81, 216, 160);
   border: 4px solid black;
   box-shadow: 4px 4px 0 0 black;
   user-select: none;
   transform: translate(0, 0);
+
+  border-radius: 20%;
 }
 .sound {
   font-size: 14px;
   text-transform: uppercase;
-  color: #ff9068;
+  color: white;
   margin-top: 7px
 }
 .key.playing {
