--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@ h1 {
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 20px 30px;
-  background-color: rgb(18, 102, 109);
+  background-color: rgb(24, 57, 83);
   border: 4px solid black;
   box-shadow: 4px 4px 0 0 black;
+  border-radius: 10px 20px 30px;
 }
 .key {
   width: 100px;
